# rv-utils

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindMatlab.cmake  Findrv_cpp_utils.cmake
include/rv/: trainutils.hpp
include/rv/camera/: camera.h  camera_image.h  camera_listener.h  creative.h  kinect_one.h  pmd.h
include/rv/cout/: colored_text_output.h  progress_output.h
include/rv/eigen/io/: csv.h
include/rv/io/: h5_block_reader.h  h5_block_writer.h  ls.h  ply.h
include/rv/io/serialization/: binary_serialization.h  compressed_serialization.h  serialization.h  text_serialization.h
include/rv/log/: log.h
include/rv/ml/rf/: common.h  forest.h  tree.h
include/rv/ml/rf/data/: imgsample.h  matsample.h  patchsample.h  sample.h  single_storage_sample.h  target.h
include/rv/ml/rf/leafnodefcn/: classificationleafnodefcn.h  leafnodefcn.h  make_leaf_node_fcn.h  regressionleafnodefcn.h
include/rv/ml/rf/node/: leafnode.h  make_node.h  node.h  splitnode.h
include/rv/ml/rf/proto/: rf.pb.cc  rf.pb.h  rf.proto
include/rv/ml/rf/splitevaluator/: classificationsplitevaluator.h  make_split_evaluator.h  regressionsplitevaluator.h  splitevaluator.h
include/rv/ml/rf/splitfunction/: make_split_function.h  split_function_basis_fcn.h  splitfunction.h  splitfunctionpixeldifference.h  splitfunctionpixeldifferencedependent.h  splitfunctionpixelvalue.h
include/rv/ml/rf/train/: trainforest.h  traintree.h  traintreequeued.h  traintreerecursive.h
include/rv/ocv/: bwlabel.h  caffe.h  color.h  convert.h  geometry.h  linalg.h  meanshift.h  visualize.h
include/rv/ocv/colormap/: colormap.h  colormap_cool_warm.h  colormap_gnuplot.h  colormap_greys.h  colormap_jet.h
include/rv/ocv/io/: csv.h  npy.h
include/rv/plot/: gnuplot_util.hpp
include/rv/rand/: rand.h
include/rv/stat/: core.h  cumulative.h
include/rv/timer/: cpu_timer.h  fps.h  gpu_timer.h  timer.h
src/rv/cout/: colored_text_output.cpp
src/rv/ml/rf/: common.cpp  forest.cpp  tree.cpp
src/rv/ml/rf/data/: imgreplicatebordersample.cpp  imgsample.cpp  matsample.cpp  patchsample.cpp  single_storage_sample.cpp
src/rv/ml/rf/leafnodefcn/: classificationleafnodefcn.cpp  leafnodefcn.cpp  make_leaf_node_fcn.cpp  meanregressionleafnodefcn.cpp  meanstdregressionleafnodefcn.cpp  medianregressionleafnodefcn.cpp  regressionregressionleafnodefcn.cpp
src/rv/ml/rf/node/: leafnode.cpp  make_node.cpp  splitnode.cpp
src/rv/ml/rf/splitevaluator/: giniclassificationsplitevaluator.cpp  informationgainclassificationsplitevaluator.cpp  make_split_evaluator.cpp  splitevaluator.cpp  tracecovregressionsplitevaluator.cpp  variancereductionregressionsplitevaluator.cpp  weighted_trace_cov_regression_split_evaluator.cpp
src/rv/ml/rf/splitfunction/: make_split_function.cpp  split_function_basis_fcn.cpp  splitfunction.cpp  splitfunctionpixeldifference.cpp  splitfunctionpixeldifferencedependent.cpp  splitfunctionpixelvalue.cpp
src/rv/ml/rf/train/: trainforest.cpp  traintree.cpp  traintreequeued.cpp  traintreerecursive.cpp
